<resources>
    <string name="app_name">곧-감!</string>
    <string name="abc">abc</string>
    <string name="emergency">emergency</string>
    <string name="nextactivity" />
    <string name="messenger">messenger</string>
    <string name="Start">start</string>
    <string name="alarm_set">alarm_set</string>
    <string name="sa">알람 설정</string>
    <string name="ra">알람 해제</string>
    <string name="ts">시간 설정</string>
    <string name="_1">반복 알람 테스트(1분마다 알람)</string>
    <string name="na">알람 해제</string>
    <string name="_10">시간 변경(10초 후)/ 미구현</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="alarm">Alarm</string>
    <string name="time_setting_completed">time setting completed</string>
    <string name="set">set</string>
    <string name="reset">reset</string>
    <string name="turn_off_the_alarm">turn off the alarm</string>
    <string name="quick_messenger">Quick Messenger</string>
    <string name="where_am_i">Where am I ?</string>
    <string name="alarm_setting">Alarm Setting</string>
    <string name="emergency_call">Emergency Call</string>
</resources>
