<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yh.gotgam.AlarmActivity"
    android:background="#ffffff">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/sa"
        android:id="@+id/setAlarm"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/ra"
        android:id="@+id/removeAlarm"
        android:layout_below="@+id/setAlarm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/ts"
        android:id="@+id/button"
        android:layout_below="@+id/removeAlarm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/_1"
        android:id="@+id/repeatAlarm"
        android:layout_below="@+id/button" />
</RelativeLayout>
