<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="false">

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick05"
        android:text="@string/alarm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextactivity" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick02"
        android:text="@string/messenger"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextactivity" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:onClick="onClick04"
        android:text="@string/map" />


</LinearLayout>