<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="false">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="443dp"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:contentDescription="@string/abc"
        android:src="@drawable/gotgammoji" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:targetApi="jelly_bean_mr1" />


    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:onClick="onClick03"
        android:text="@string/Start" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:onClick="onClick01"
        android:text="@string/emergency" />


</LinearLayout>

